packages/astro/e2e/fixtures/errors/src/components/vue/VueRuntimeError.vue
<template>
  <h1>Wanna see something undefined? {{ not.here }}</h1>
</template>
